# url-shortener

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
core/: models.py  urls.py  views.py
core/api/: serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/tests/: test_core.py
nginx/: Dockerfile  default.conf
url_shortener/: settings.py  urls.py
